font and alignment -login page. bug fix in progress

--- a/src/App.css
+++ b/src/App.css
@@ -21,18 +21,8 @@
 }
 @media only screen and (max-width: 768px) {
   .sub-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  
-    /* margin-top: 4%; */
+  flex-direction: column;
   }
-  .dividercontainer {
-    visibility: hidden;
-
-  }
-  
   
 }
 
