--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -38,10 +38,7 @@
 
 
   @media only screen and (max-width: 768px){
-    .create-user{
-      margin-top: -220%;
-
-    }
+   
 
   }
   
