--- a/src/features/auth/login.css
+++ b/src/features/auth/login.css
@@ -1,15 +1,16 @@
-
-
-.login-container,.right-container,.left-container {
+.login-container,
+.right-container,
+.left-container {
   height: 40%;
 }
 
-.email-signup,.social-login  {
+.email-signup,
+.social-login {
   display: grid;
- grid-template-rows: 1fr 1fr 5fr 1fr 1fr;
- height: max-content;
- align-items: center;
- justify-items: center;
+  grid-template-rows: 1fr 1fr 5fr 1fr 1fr;
+  height: max-content;
+  align-items: center;
+  justify-items: center;
 }
 
 /* .email-signup,.social-login  {
@@ -100,7 +101,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 27px;
- 
+
 }
 
 .dateinputbox {
@@ -213,26 +214,12 @@
 
 .socialsignup-buttoncontainer {
   margin-bottom: 37px;
-  height:240px;
+  height: 240px;
 }
-
-
-
-
-
-
-
-
-
-
 
 .navbar-container {
   margin-top: 46px;
 }
-
-
-
-
 
 .divider-Or {
   width: 50px;
@@ -247,42 +234,27 @@
   line-height: 21px;
   /* 52.5% */
 }
+
 @media only screen and (max-width: 768px) {
   .social-button {
-    background: #f9eee1;
-    display: flex;
     width: 300px;
-    height: 40px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    border-radius: 40px;
-    border: 0.5px solid #41414e;
-    margin: 14px;
   }
-  .social-login  {
-    display: grid;
-   grid-template-rows: 1fr 1fr 5fr 1fr 1fr;
-   margin-top:-180%;
-   height: max-content;
-   align-items: center;
-   justify-items: center;
-  }
-  .email-signup {
-    display: grid;
-   grid-template-rows: 1fr 1fr 5fr 1fr 1fr;
-   height: max-content;
-   align-items: center;
-   justify-items: center;
-  }
-  .socialsignup-buttoncontainer {
-    margin-bottom: 37px;
-    height:240px;
-    margin-top: -50%;
-  }
-  
-  
 
-  
-  
+  .svg-container {
+    display: none;
+  }
+  .divider-Or{
+    display: none;
+  }
+
+  .email-signup {
+ 
+  grid-template-rows: 1fr 1fr 3fr 1fr 1fr;
+}
+
+
+.social-login {
+  grid-template-rows: 1fr;
+}
+
 }
